--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,1 +1,11 @@
-{{ param }}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <p>{{ param }}</p>
+</body>
+</html>
